# rust-casbin-example

./: Cargo.toml  README.md
auth/: policy.csv
src/: handler.rs  main.rs
